finish navigation bar

--- a/styles/style.css
+++ b/styles/style.css
@@ -26,10 +26,29 @@
 
 --- WHITE SPACE 
 
+/*  */
 
+* * {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
+html {
+  font-size: 62.5%;
+}
 
-/* GENERAL REUSABLE RULES*/
+body {
+  font-family: 'Rubik', sans-serif;
+  font-weight: 400;
+  line-height: 1;
+  color: #555;
+  font-size: 2rem;
+}
+
+/* **************************** */
+/* GENERAL REUSABLE RULES */
+/* **************************** */
 
 .heading-primary {
   font-size: 5.2rem;
@@ -78,7 +97,9 @@ btn-full:active {
   box-shadow: inset 0 0 0 3px #fff;
 }
 
-/* HEADER */
+/* **************************** */
+/* HEADER*/
+/* **************************** */
 .header {
   display: flex;
   justify-content: space-between;
@@ -92,25 +113,26 @@ btn-full:active {
   height: 2.4rem;
 }
 
-/* HERO */
+/* **************************** */
+/* NAVIGATION */
+/* **************************** */
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+.main-nav-list {
+  list-style: none;
+  display: flex;
+  gap: 3.2rem;
 }
 
-html {
-  font-size: 62.5%;
+.main-nav-link:link,
+.main-nav-link:visited {
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.8rem;
 }
-
-body {
-  font-family: 'Rubik', sans-serif;
-  font-weight: 400;
-  line-height: 1;
-  color: #555;
-  font-size: 2rem;
-}
+/* **************************** */
+/* HERO SECTION */
+/* **************************** */
 .section-hero {
   background-color: #fdf2e9;
   padding: 9.6rem;
