--- a/styles/style.css
+++ b/styles/style.css
@@ -139,6 +139,7 @@ btn-full:active {
 }
 .hero {
   max-width: 130rem;
+  padding: 0 3.2rem;
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -183,4 +184,27 @@ btn-full:active {
 .delivered-text span {
   color: #b8651b;
   font-weight: 700;
+}
+
+/* **************************** */
+/* HOW IT WORKS SECTION */
+/* **************************** */
+.section-how {
+  padding: 9.6rem 0;
+  background-color: orangered;
+}
+.container {
+  max-width: 120rem;
+  padding: 0 3.2rem;
+  margin: 0 auto;
+}
+.grid {
+  display: grid;
+  gap: 9.6rem;
+}
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
 }
