--- a/styles/style.css
+++ b/styles/style.css
@@ -1,31 +1,3 @@
-/*
---- 01 TYPOGRAPHY SYSTEM
-
-- Font sizes (px)
-
-10 / 12 / 16 / 17 / 18 / 20 / 21 / 22 / 23 / 24 / 30 / 36 / 44 / 53 / 62 / 74 / 86 / 98  
-
-- Font weights
-
-- Line heights 
-
---- 02 SPACING SYSTEM (PX)
-
-2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-
---- 03 COLORS 
-
-- Primary: #e67e22
-- Tints: #fdf2e9
-- Shades: #b8651b
-- Accents 
-
---- 04 SHADOWS
-
---- 05 BOARDER RADIOUS
-
---- WHITE SPACE 
-
 /*  */
 
 * * {
@@ -44,57 +16,6 @@ body {
   line-height: 1;
   color: #555;
   font-size: 2rem;
-}
-
-/* **************************** */
-/* GENERAL REUSABLE RULES */
-/* **************************** */
-
-.heading-primary {
-  font-size: 5.2rem;
-  font-weight: 700;
-  line-height: 1.05;
-  color: #333;
-  letter-spacing: -0.5px;
-  margin-bottom: 3.2rem;
-}
-.margin-right-sm {
-  margin-right: 1.6rem;
-}
-.btn:link,
-.btn:visited {
-  display: inline-block;
-  font-size: 2rem;
-  padding: 1.6rem 3.2rem;
-  border-radius: 9px;
-  color: #fff;
-  text-decoration: none;
-  transition: all 0.3s;
-  font-weight: 600;
-}
-
-.btn--full:link,
-btn-full:visited {
-  background-color: #e67e22;
-  color: #fff;
-}
-
-.btn--full:hover,
-btn-full:active {
-  background-color: #b8651b;
-}
-
-.btn--outline:link,
-.btn--outline:visited {
-  background-color: #fff;
-  color: #555;
-}
-
-.btn--outline:hover,
-.btn--outline:active {
-  background-color: #fdf2e9;
-  color: #555;
-  box-shadow: inset 0 0 0 3px #fff;
 }
 
 /* **************************** */
@@ -191,20 +112,18 @@ btn-full:active {
 /* **************************** */
 .section-how {
   padding: 9.6rem 0;
-  background-color: orangered;
 }
-.container {
-  max-width: 120rem;
-  padding: 0 3.2rem;
-  margin: 0 auto;
+
+.step-number {
+  font-size: 8.6rem;
+  font-weight: 600;
+  color: #ddd;
+  margin-bottom: 1.2rem;
 }
-.grid {
-  display: grid;
-  gap: 9.6rem;
+.step-img {
+  width: 50%;
 }
-.grid--2-cols {
-  grid-template-columns: repeat(2, 1fr);
-}
-.grid--3-cols {
-  grid-template-columns: repeat(3, 1fr);
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.8;
 }
