--- a/styles/style.css
+++ b/styles/style.css
@@ -121,8 +121,38 @@ body {
   margin-bottom: 1.2rem;
 }
 .step-img {
-  width: 50%;
+  width: 35%;
 }
+.step-img-box {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.step-img-box::before,
+.step-img-box::after {
+  content: '';
+  display: block;
+  padding-bottom: 60%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+}
+
+.step-img-box::before {
+  background-color: #fdf2e9;
+  width: 60%;
+  z-index: -2;
+}
+.step-img-box::after {
+  background-color: #fae5d3;
+  width: 45%;
+  padding-bottom: 45%;
+  z-index: -1;
+}
+
 .step-description {
   font-size: 1.8rem;
   line-height: 1.8;
